squash merged test